@@ -7,6 +7,7 @@
   is not capable of duplex and ADF is selected. Therefore, for duplex-capable
   scanners, this is never shown. For duplex-incapable scanners, this is shown if
   the ADF is selected, but otherwise hidden.
+* + support for the new API in ImageMagick for unsharp mask
 
 
 1.8.8 (29.10.2017):
